# molecule-svn

branches/pfresnay/: Molecule.sln  autogen.sh  configure.ac
branches/pfresnay/Molecule/: Makefile.am
branches/pfresnay/Molecule.WebSite/: AtomeSiteMapProvider.cs  Default.aspx.designer.cs  Error.aspx  Global.asax  Page.Master.cs  SearchAutoComplete.asmx  SearchAutoComplete.asmx.cs  Web.sitemap
trunk/: ChangeLog  Makefile.am  Makefile.include  Molecule.sln  configure.ac
trunk/Molecule/: ArrayExtensions.cs  DateTimeUtil.cs  EnumHelper.cs  InitDb.sql  Makefile.am  Messages.Designer.cs  Messages.resx  Molecule.csproj  ObjectExtensions.cs  ResourceNotFoundException.cs  SQLiteProvidersHelper.cs  Services.cs  StringExtensions.cs
trunk/Molecule.Console/: App.config  Makefile.am  Molecule.Console.csproj  Program.cs  molecule-admin.in
trunk/Molecule.MvcWebSite/: Default.aspx  Default.aspx.cs  Default2.aspx  Global.asax  Global.asax.cs  IAtome.cs  Molecule.MvcWebSite.csproj  Web.config
trunk/Molecule.MvcWebSite/App_GlobalResources/: Common.designer.cs  Common.fr.resx  Common.resx  Common2.designer.cs  molecule.designer.cs  molecule.fr.resx  molecule.resx  molecule1.designer.cs  photo.designer.cs  photo.fr.resx  photo.resx  photo2.designer.cs  webmusic.designer.cs  webmusic.fr.resx  webmusic.resx  webmusic1.designer.cs
trunk/Molecule.MvcWebSite/Controllers/: AccountController.cs  CssController.cs  HomeController.cs  PageController.cs  PageControllerBase.cs  PreferencesPageControllerBase.cs  WebdavController.cs
trunk/Molecule.MvcWebSite/Models/: PageData.cs  PreferencesPageData.cs  ProviderSelectorData.cs
trunk/Molecule.MvcWebSite/Mvc/: AuthorizeAttribute.cs  ControllerFactory.cs  HelperExtensions.cs  MvcElement.cs  UrlHelperExtensions.cs  ViewEngine.cs
trunk/Molecule.MvcWebSite/Properties/: AssemblyInfo.cs
trunk/Molecule.MvcWebSite/RouteHandlers/: WebdavRouteHandler.cs
trunk/Molecule.MvcWebSite/Services/: AdminService.cs  AtomeInfo.cs  AtomeService.cs  AtomeUserAuthorizations.cs  CssVariableInfo.cs  IAtomeInfo.cs  IAtomeUserAuthorizations.cs
trunk/Molecule.MvcWebSite/WebdavInternal/: WebdavActionResult.cs  WebdavResult.cs  WebdavUploadFileActionResult.cs  WebdavUploadFileResult.cs
trunk/Molecule.WebSite/: Atome.xsd  AtomeAccessModule.cs  AtomeSiteMapProvider.cs  CacheHandler.ashx  CacheHandler.ashx.cs  CssHandler.ashx  CssHandler.ashx.cs  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  Error.aspx  Error.aspx.cs  Error.aspx.designer.cs  Global.asax.cs  ImageHandler.ashx  ImageHandler.ashx.cs  Log4Net.config  Login.aspx  Login.aspx.cs  Login.aspx.designer.cs  Molecule.WebSite.csproj  Page.Master  Page.Master.cs  Page.Master.designer.cs  PreferencesPage.Master  PreferencesPage.Master.cs  PreferencesPage.Master.designer.cs  ProviderSelector.ascx  ProviderSelector.ascx.cs  ProviderSelector.ascx.designer.cs  Web.config  Web.sitemap
trunk/Molecule.WebSite/App_Browsers/: w3validator.browser
trunk/Molecule.WebSite/App_GlobalResources/: Common.fr.resx  Common.resx  molecule.Designer.cs  molecule.fr.resx  molecule.resx  photo.fr.resx  photo.resx  webmusic.fr.resx  webmusic.resx
trunk/Molecule.WebSite/App_LocalResources/: Page.Master.fr.resx  Page.Master.resx  PreferencesPage.Master.fr.resx  PreferencesPage.Master.resx
trunk/Molecule.WebSite/NeatUpload/: Progress.aspx  Progress.aspx.cs  Progress.aspx.designer.cs
trunk/Molecule.WebSite/Services/: AdminService.cs  AtomeInfo.cs  AtomeService.cs  AtomeUserAuthorizations.cs  IAtomeInfo.cs
trunk/Molecule.WebSite/admin/: CreateUser.aspx  CreateUser.aspx.designer.cs  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  Setup.aspx  Setup.aspx.cs  Setup.aspx.designer.cs
trunk/Molecule.WebSite/setup/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs
trunk/Molecule/Atome/: AtomeProviderBase.cs  IProvider.cs  ProviderException.cs  ProviderInfo.cs
trunk/Molecule/Collections/: CollectionExtensions.cs  Dictionary.cs  IKeyedEnumerable.cs
trunk/Molecule/Configuration/: IConfigurationClient.cs  XmlConfigurationClient.cs
trunk/Molecule/Drawing/: BitmapExtensions.cs
trunk/Molecule/GConf/: Helper.cs
trunk/Molecule/IO/: Extensions.cs  XdgBaseDirectorySpec.cs
trunk/Molecule/Log/: Event.cs  LogService.cs  SemanticEvent.cs
trunk/Molecule/Metadata/: JpegHeaderReader.cs  JpegMetadataReader.cs  Mp3MetadataReader.cs
trunk/Molecule/Properties/: AssemblyInfo.cs
trunk/Molecule/Runtime/: IsUsablePluginAttribute.cs  Plugin.cs
trunk/Molecule/Serialization/: Atome.cs
trunk/Molecule/Web/: CssVariablesExtender.cs  Singleton.cs
trunk/Molecule/Webdav/: IVirtualWebdavFolder.cs  VirtualWebdavFolderService.cs  WebdavFileInfo.cs
trunk/WebMusic/: Makefile.am
trunk/WebMusic/WebMusic.Providers/: IAlbum.cs  IArtist.cs  IMusicLibraryProvider.cs  ISong.cs  Makefile.am  Makefile.in  MusicLibraryProviderInfo.cs  MusicLibraryProviderLoader.cs  WebMusic.Providers.csproj
trunk/WebMusic/WebMusic.Providers.Banshee/: BansheeProvider.cs  Makefile.am  WebMusic.Providers.Banshee.csproj
trunk/WebMusic/WebMusic.Providers.Rhythmbox/: AssemblyInfo.cs  RhythmboxProvider.cs  WebMusic.Providers.Rhythmbox.csproj
trunk/WebMusic/WebMusic.Providers.Stub/: MusicLibraryProvider.cs  WebMusic.Providers.Stub.csproj
trunk/WebMusic/WebMusic.Providers.WMP/: MusicLibraryProvider.cs  WebMusic.Providers.WMP.csproj
trunk/WebPhoto/WebPhoto.Providers/: IPhoto.cs  ITag.cs  (+2 more)
trunk/WebPhoto/WebPhoto.Providers.FS/: Photo.cs  PhotoLibraryProvider.cs  Tag.cs  WebPhoto.Providers.FS.csproj
trunk/WebPhoto/WebPhoto.Providers.Fspot/: Photo.cs  PhotoLibraryProvider.cs  Tag.cs  WebPhoto.Providers.Fspot.csproj
trunk/WebPhoto/WebPhoto.Providers.Stub/: PhotoLibraryProvider.cs  WebPhoto.Providers.Stub.csproj
(+379 files in other folders)
